// Copyright (c) Quinntyne Brown. All Rights Reserved.
// Licensed under the MIT License. See License.txt in the project root for license information.

using CodeGenerator.Core.Validation;

namespace CodeGenerator.Core.Artifacts;

public class ArtifactModel : IValidatable
{
    public ArtifactModel()
    {
    }

    public ArtifactModel Parent { get; set; }

    public virtual ValidationResult Validate()
    {
        return ValidationResult.Success();
    }

    public virtual IEnumerable<ArtifactModel> GetChildren()
    {
        yield break;
    }

    public virtual List<ArtifactModel> GetDescendants(ArtifactModel root = null, List<ArtifactModel> children = null)
    {
        root ??= this;

        children ??= new();

        children.Add(root);

        foreach (var child in root.GetChildren())
        {
            if (child != null)
            {
                GetDescendants(child, children);
            }
        }

        return children;
    }
}
